<resources>
    <string name="name_list">Playlist maker</string>
    <string name="search_name">Поиск</string>
    <string name="media_name">Медиатека</string>
    <string name="setting_name">Настройки</string>
    <string name="dark_name">Тёмная тема</string>
    <string name="share_name">Поделиться приложением</string>
    <string name="support_name">Написать в поддержку</string>
    <string name="agreement_name">Пользовательское соглашение</string>


    //-----Поделиться приложением------//
    <string name="share_ink">https://practicum.yandex.ru/android-developer/</string>
    //-----Написать в поддержку------//
    <string name="my_e_mail">alex321632163216@yandex.ru, alex32163216@mail.ru</string>
    <string name="massage_subject">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="message_text">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    //-----Пользовательское соглашение------//
    <string name="web_page_links">https://yandex.ru/legal/practicum_offer/</string>

    <string name="artist_name">Имя исполнителя</string>
    <string name="song_title">Название композиции</string>
    <string name="temporary_time">00:00</string>


    <string name="refresh_but">Обновить</string>
    <string name="ph_no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="ph_not_found">Ничего не нашлось</string>

    <string name="search_title">Вы искали</string>
    <string name="clear_history_butt">Очистить историю</string>
    <string name="default_play_time">00:00</string>

    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>




</resources>