<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back"
        style="@style/NameHeader"
        android:paddingBottom="22dp"
        app:title="@string/setting_name" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_theme"
        style="@style/StyleButtonsSetting"
        android:layout_width="match_parent"
        android:text="@string/dark_name"
        app:thumbTint="@color/switch_color_circle"
        app:trackTint="@color/switch_color_oval" />

    <TextView
        android:id="@+id/share"
        style="@style/StyleButtonsSetting"
        android:text="@string/share_name"
        app:drawableEndCompat="@drawable/vector6" />

    <TextView
        android:id="@+id/write_to_support"
        style="@style/StyleButtonsSetting"
        android:text="@string/support_name"
        app:drawableEndCompat="@drawable/light_mode7" />

    <TextView
        android:id="@+id/terms_of_use"
        style="@style/StyleButtonsSetting"
        android:text="@string/agreement_name"
        app:drawableEndCompat="@drawable/vector8" />
</LinearLayout>