<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back"
        style="@style/NameHeader"
        app:title="@string/search_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/corner_rounding"
        android:layout_marginBottom="@dimen/text_normal"
        android:background="@drawable/search_engine"
        android:orientation="horizontal"
        android:padding="@dimen/icon_padding">

        <ImageView
            style="@style/Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/enteringSearchQuery"
            style="@style/TextSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/windowCleaning"
            style="@style/MissingCross"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector10" />

            <TextView
                android:id="@+id/error_3"
                style="@style/Error"
                android:padding="@dimen/text_normal"
                android:text="@string/ph_no_connection" />

            <Button
                android:id="@+id/refresh"
                style="@style/Refresh"
                android:text="@string/refresh_but"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>